<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.homepage.HomePageActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="488dp"
        android:layout_height="836dp"
        android:layout_marginStart="-25dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="-25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/namnl_st_1" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="252dp"
        android:background="@drawable/rounded_edittext_signin"
        android:ems="10"
        android:hint="@string/login_username"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textColor="#403C3C"
        android:textColorHighlight="#6E3F3F"
        android:textColorHint="#958989"
        android:textColorLink="#A37979"
        android:textSize="10dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edittext_signin"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textColor="#403C3C"
        android:textSize="10dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="170dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:text="@string/login_button"
        android:backgroundTint="#FFFFA657"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="96dp"
        android:layout_height="82dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/grannar_svart" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="NEIGHBOUR"
        android:textColor="#050505"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="170dp"
        android:layout_height="61dp"
        android:layout_marginBottom="130dp"
        android:backgroundTint="#DF9696"
        android:text="@string/login_register_button"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/sign_up_text_view"
        android:textColor="#050505"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.721" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="32dp"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic"
        android:text="SIGN UP TO MEET YOUR NEW FRIENDS"
        android:textSize="10dp"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTextView"
        app:layout_constraintVertical_bias="0.255" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginBottom="350dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="WELCOME"
        android:textColor="#050505"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="LOG IN TO MEET YOUR NEW FRIENDS"
        android:textColor="#050505"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298" />

</androidx.constraintlayout.widget.ConstraintLayout>