...
        android:textColorHint="#80707070"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/femaleButton"
        app:layout_constraintTop_toBottomOf="@+id/femaleButton" />

    <EditText
        android:id="@+id/minAge"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/toggle_button_on"
        android:ems="10"
...
        android:textColorHint="#80707070"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/nonBinButton"
        app:layout_constraintTop_toBottomOf="@+id/nonBinButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_result_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:visibility="visible"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/menuToolbar"
...
