<resources>
    <string name="app_name">Neighbours</string>
    <string name="min_age_hint">Min Age</string>
    <string name="max_age_hint">Max Age</string>
    <string name="free_search_hint">Free search:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="non_binary">Non-bin</string>

    <string name="location_dialog_ok">Ok</string>
    <string name="location_dialog_negative">No Way!</string>
    <string name="location_dialog_permission">ACCESS_COARSE_LOCATION</string>
    <string name="location_motivation">Do you want the permission so we can pin-point your activity</string>

    <string name="login_password">PASSWORD</string>
    <string name="login_username">EMAIL</string>
    <string name="login_button">Log In</string>
    <string name="login_register_button">SIGN UP</string>
    <string name="sign_up_text_view">BECOME A NEIGHBOUR</string>
    <string name="wrong_username_format">Please enter a valid email</string>
    <string name="wrong_password_format">Password must contain 6 letters, at least one lowercase and one uppercase</string>
    <string name="signup_enter_password">ENTER PASSWORD</string>
    <string name="signup_sign_up">Sign Up</string>
    <string name="signup_enter_email">ENTER EMAIL</string>

    <string name="neighbour_email_intent_subject">Please be my friend!</string>
    <string name="neighbour_email_intent_text">Hi Stranger! Would you like to be my friend</string>
    <string name="neighbour_email_intent_message">Choose an Email client :</string>
    <string name="edit_profile_save_button">Save</string>
    <string name="edit_profile_last_name_hint">Last name</string>
    <string name="edit_profile_first_name_hint">First name</string>
    <string name="edit_profile_email_hint">Email</string>
    <string name="edit_profile_age_hint">Age</string>
    <string name="edit_profile_camera_button_text">Camera</string>
    <string name="FREE_SEARCH">FREE SEARCH</string>
</resources>